Add main results

--- a/presentation.tex
+++ b/presentation.tex
@@ -47,6 +47,7 @@ hyperref={
 \usepackage{caption}
 
 \colorlet{darkgreen}{green!65!black}
+\definecolor{lightblue}{HTML}{0071bc}
 
 \DeclareCiteCommand{\citeauthor}
 {\boolfalse{citetracker}%
